[BUGFIX] Fixed the border in dark mode on the heading on the domain checker v2.

--- a/assets/css/dashboard-css-2024.css
+++ b/assets/css/dashboard-css-2024.css
@@ -652,6 +652,10 @@ html[data-theme='dark'] body {
     background-color: #222 !important;
 }
 
+.dark-mode .card-header-services {
+    border:1px solid #333 !important;
+}
+
 /* =================== Nexure Dashboard Grid Styles =================== */
 
 .special-caliweb-spacing {
